--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="modele/src"/>
+	<classpathentry excluding="**/*.cup|**/*.lex" kind="src" path="modele/src"/>
 	<classpathentry kind="lib" path="modele/lib/java-cup-11b-runtime.jar"/>
 	<classpathentry kind="lib" path="modele/tools/java-cup-11b.jar"/>
 	<classpathentry kind="lib" path="modele/tools/jflex-1.6.1.jar"/>
